--- a/config/config
+++ b/config/config
@@ -13,5 +13,6 @@ lua_path = root.."lib/?.lua;"..root.."lib/?/init.lua;./lualib/?.lua;./lualib/?/i
 config = "config.config"
 debug_console = 8100
 login = 8001
+web = 8200
 start_time = "2016-05-10 00:00:00"
 gm_level = 1
