--- a/config/config
+++ b/config/config
@@ -14,5 +14,6 @@ config = "config.config"
 debug_console = 8100
 login = 8001
 web = 8200
+web_sign = 7SgHmw7fg357mGrzp5320pD8P2w4IQ8H
 start_time = "2016-05-10 00:00:00"
 gm_level = 1
