--- a/config/config
+++ b/config/config
@@ -6,9 +6,9 @@ harbor = 0
 start = "main"
 bootstrap = "snlua bootstrap"	-- The service for bootstrap
 lualoader = "lualib/loader.lua"
-luaservice = root.."service/?.lua;./service/?.lua"
+luaservice = root.."service/?.lua;"..root.."3rd/webclient/?.lua;./service/?.lua"
 cpath = "./cservice/?.so"
-lua_path = root.."lib/?.lua;"..root.."lib/?/init.lua;"..root.."3rd/webclient/?.lua;./lualib/?.lua;./lualib/?/init.lua"
+lua_path = root.."lib/?.lua;"..root.."lib/?/init.lua;./lualib/?.lua;./lualib/?/init.lua"
 
 config = "config.config"
 debug_console = 8100
